--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -14,6 +14,14 @@
       font-weight: 400;
       font-family: 'Hack';
       color: #a0e4cf;
+
+      @media(max-width: 600px) {
+        white-space: pre;
+        text-overflow: ellipsis;
+        max-width: 100%;
+        display: inline;
+        overflow: hidden;
+      }
     }
 
     .comment,
