--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -1,5 +1,3 @@
-@import "nord.less";
-
 .hljs {
   display: block;
   overflow-x: hidden;
@@ -12,6 +10,11 @@
   font-family: 'Hack';
   @media(max-width: 600px) {
     padding: 0 20px 20px;
+    font-size: 12px !important;
+
+    * {
+      font-size: 12px;
+    }
   }
 
   .strong {
