--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -201,7 +201,7 @@
 		font-family: 'soleil', sans-serif;
 		-webkit-font-smoothing: auto;
 		@media(max-width: 600px) {
-			font-size: 0.95em !important;
+			font-size: 1em;
 		}
 	}
 
