series page mobile style

--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -144,6 +144,7 @@
     transition: all 0.2s ease-out;
     @media(max-width: 600px) {
       padding: 15px;
+      margin-bottom: 8px;
     }
 
     &:hover {
@@ -236,7 +237,7 @@
               font-family: 'ProductSans-Regular',sans-serif;
               font-size: 0.9em;
             }
-            @media(max-width: 400px) {
+            @media(max-width: 500px) {
               font-size: 0.8em;
             }
 
@@ -331,12 +332,9 @@
       display: block;
       max-width: 326px;
       overflow: hidden;
+      height: fit-content;
       @media(max-width: 600px) {
         max-width: 40%;
-        height: 110px;
-      }
-      @media(max-width: 400px) {
-        height: 72px;
       }
 
       img {
