--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -52,6 +52,7 @@ blockquote pre {
       @media(max-width: 600px) {
         overflow-y: hidden;
         font-size: 12px;
+        padding: 55px 20px 20px;
       }
     }
 
