--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -23,7 +23,7 @@
 			margin: 0 auto;
 		}
 		@media(max-width: 600px) {
-			width: 86%;
+			width: 85%;
 			margin: 5px auto 30px;
 		}
 
@@ -217,6 +217,7 @@
 			text-align: left;
 			line-height: 1.8 !important;
 			font-style: normal;
+			font-size: 1em;
 		}
 	}
 }
@@ -257,7 +258,7 @@ article {
 				line-height: 1.7;
 				display: block;
 				@media(max-width: 600px) {
-					margin: 10px 0;
+					margin: 0 0 15px;
 				}
 
 				&::before {
